<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layoutDescription="@xml/activity_ranks_third_day_scene"
    tools:context=".Ranks_third_day">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="422dp"
        android:layout_height="144dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/ranks"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="287dp"
        android:layout_height="117dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ranks"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="287dp"
        android:layout_height="117dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ranks"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="352dp"
        android:layout_height="111dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:srcCompat="@drawable/rectangle_3" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="365dp"
        android:layout_height="94dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/rectangle3"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:srcCompat="@drawable/rectangle_3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="365dp"
        android:layout_height="94dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/rectangle4"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:srcCompat="@drawable/rectangle_3" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="365dp"
        android:layout_height="94dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/rectangle5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:srcCompat="@drawable/rectangle_3" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="248dp"
        android:layout_height="9dp"
        android:contentDescription="@string/rectangle1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/line_1" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="249dp"
        android:layout_height="14dp"
        android:contentDescription="@string/rectangle6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/line_1" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="249dp"
        android:layout_height="14dp"
        android:contentDescription="@string/rectangle7"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/line_1"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="249dp"
        android:layout_height="14dp"
        android:contentDescription="@string/rectangle8"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/line_1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/noob"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/day"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="368dp"
        android:layout_height="89dp"
        android:contentDescription="@string/rectangle_xz_kakoy"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/rectangle_4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        android:text="@string/iron_hand"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/days"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_snow"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_7_days"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hulk"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_14_days"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bro_wtf"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000_days"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />
</androidx.constraintlayout.motion.widget.MotionLayout>